# iris-utilities

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  Dockerfile  INSTALLATION.md  LICENSE.md  PRIVACY.md  README.md  SECURITY.md  bot.js  compose.yaml  config.js  config.json  debug_console.js  index.js  license  package-lock.json  package.json  script.js  server.js  start.cmd  start.sh  start_all.bat  start_all.cmd  start_all_in_wt.cmd  start_bot.bat  start_bot.cmd  start_debug_console.bat  start_debug_console.cmd  start_pre_install.cmd  start_server.bat  tsconfig.json  utilities.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
commands/: ibmgoogletts.js  invite.js  reload.js  test.js  tts.js
commands/admin/: afk.js  archive.js  ban.js  bans.js  clear.js  deafen.js  disconnect.js  flextape.js  giverole.js  kick.js  move.js  mute.js  takerole.js  timeout.js  unban.js  warn.js  warnings.js  wipeout.js  yeet.js  yoink.js
commands/bot_owner/: lockdown.js  shell.js  updatelog.js
commands/fun/: akinator.js  cards.js  dogeify.js  flipcoin.js  google.js  magic8ball.js  newyearsball.js  poll.js  reddit.js  roast.js  rolldice.js  spongebobmock.js  tictactoe.js
commands/guild_settings/: create_special_channels.js  set_admin_roles.js  set_allowed_channels.js  set_google_tts_language.js  set_ibm_tts_language.js  set_moderator_roles.js  set_new_member_roles.js  set_prefix.js  set_volume_maximum.js  set_volume_multiplier.js  toggle_clear_message.js  toggle_command_message_removal.js  toggle_disconnect_tts_voice.js  toggle_invite_blocking.js  toggle_player_description.js  toggle_queue_tts_voice.js  toggle_url_blocking.js
commands/help/: about_command.js  all_commands.js  help.js
commands/hidden/: invite_developer.js  test.js
commands/info/: disclaimer.js  feedback.js  info.js  invite.js  invite_developer.js  patreon.js  request_history_deletion.js  support_discord.js
commands/music/: controls.js  nowplaying.js  pause.js  play.js  queue.js  replay.js  resume.js  search.js  skip.js  stop.js  summon.js  timestamp.js  volume.js
commands/music_controls/: controls.js  nowplaying.js  pause.js  queue.js  replay.js  resume.js  skip.js  summon.js  timestamp.js  volume.js
commands/music_leave/: stop.js
commands/music_playback/: play.js  search.js
commands/super_people/: blacklist.js  dm.js  echo.js  eval.js  getguild.js  getguilds.js  reload.js  reload_all.js  restart.js  shell.js  supercommands.js  superpeople.js  superpermissions.js  supervolume.js
commands/utilities/: channelinfo.js  detectlang.js  embed.js  googletranslate.js  ipinfo.js  langcodes.js  math.js  memberinfo.js  poll.js  remindme.js  roleinfo.js  serverinfo.js  tts.js
docker/database/: .env.example  mongod.conf.example
docker/iris-utilities/: .env.example
docker/lavalink/: .env.example  application.yml
docker/libre-translate/: .env.example
files/: 8ball.json  disclaimer.txt  google_languages.json  ibm_languages.json  roasts.json
files/new_years_ball/: ball_0.txt  ball_1.txt  ball_10.txt  ball_11.txt  ball_2.txt  ball_3.txt  ball_4.txt  ball_5.txt  ball_6.txt  ball_7.txt  ball_8.txt  ball_9.txt
misc/: cards_against_humanity.json  google_translate_languages.json  tts_voices.json
src/: AudioController.js  CustomRichEmbed.js  DisBotCommander.js  GuildConfigManipulator.js  QueueManager.js  SHARED_VARIABLES.js  VolumeManager.js  bot.js  commands.rs  common.rs  createConnection.js  disBotServers.js  discord_bot.js  discord_bot.ts  docker_cache.rs  emoji.js  errors.js  events.rs  index.js  index.ts  interactions.rs  main.rs  messages.js  permissions.js  playStream.js  sharedVariables.js  utilities.js  youtube.js
src/commands/: autoplay.js  configuration.rs  fun.rs  help.js  info.rs  loop.js  moderation.rs  music.rs  play.js  skip.js  stop.js  test.js  utility.rs  volume.js
src/common/: ai.rs  audio.js  audio_player.js  brand.rs  client_commands.js  database.rs  entitlements.rs  guild_configs.js  helpers.rs  moderation.rs  music.rs  telemetry.rs
typings/: index.d.ts
(+472 files in other folders)
