# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iris-utilities"
version = "4.0.0"
edition = "2021"

# Entry point for I.R.I.S. Utilities
[[bin]]
name = "iris-utilities"
path = "src/main.rs"

# Used as a cache for Docker images
[[bin]]
name = "docker-cache"
path = "src/docker-cache.rs" # injected by Dockerfile

[dependencies]
async-trait = "0.1.74"
bitflags = "2.4.1"
chromiumoxide = { version = "0.5.7", features = ["tokio-runtime"] }
chrono = "0.4.31"
derive_more = "0.99.17"
dotenv = "0.15.0"
image = "0.24.7"
indoc = "2.0.4"
itertools = "0.11.0"
lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs/", branch = "main" }
mongodb = { version = "2.7.1", features = ["tokio-runtime"] }
poise = { git = "https://github.com/serenity-rs/poise/", branch = "current" }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = "1.0.189"
serde_json = "1.0.107"
sha256 = "1.4.0"
songbird = { git = "https://github.com/serenity-rs/songbird/", branch = "current" }
sysinfo = "0.29.10"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
urlencoding = "2.1.3"
