# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iris-utilities"
version = "4.0.0"
edition = "2021"

# Entry point for I.R.I.S. Utilities
[[bin]]
name = "iris-utilities"
path = "src/main.rs"

# Used as a cache for Docker images
[[bin]]
name = "docker-cache"
path = "src/docker-cache.rs"

# Dependencies
[dependencies]
async-trait = "0.1.74"
bitflags = "2.4.1"
chrono = "0.4.31"
derive_more = "0.99.17"
dotenv = "0.15.0"
image = "0.24.7"
indoc = "2.0.4"
itertools = "0.11.0"
rand = "0.8.5"
regex = "1.10.2"
serde = "1.0.189"
serde_json = "1.0.107"
sha256 = "1.4.0"
sysinfo = "0.29.10"
tokio-stream = "0.1.14"
tracing = "0.1.40"
urlencoding = "2.1.3"

[dependencies.chromiumoxide]
version = "0.5.7"
features = ["tokio-runtime"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "main"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise/"
branch = "next"

[dependencies.reqwest]
version = "0.11.22"
features = ["json", "rustls-tls"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird/"
branch = "current"
features = ["receive", "simd-json"]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]
