# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iris-utilities"
version = "4.0.0"
edition = "2021"

# Entry point for I.R.I.S. Utilities
[[bin]]
name = "iris-utilities"
path = "src/main.rs"

# Used as a cache for Docker images
[[bin]]
name = "docker-cache"
path = "src/docker_cache.rs"

# Dependencies
[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bitflags = "2.9.1"
chrono = "0.4.31"
image = "0.25.6"
indoc = "2.0.6"
itertools = "0.14.0"
lazy_static = "1.4.0"
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
sha256 = "1.4.0"
sysinfo = "0.35.1"
tokio-stream = "0.1.17"
tracing = "0.1.40"
urlencoding = "2.1.3"

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]

[dependencies.chromiumoxide]
version = "0.7.0"
features = ["tokio-runtime"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "main"

[dependencies.mongodb]
version = "3.2.3"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise/"
branch = "next"

[dependencies.reqwest]
version = "0.12.19"
features = ["json", "rustls-tls"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird/"
branch = "next"
features = ["gateway", "receive"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.tokio]
version = "1.45.1"
features = ["full"]
